Enhance Spree 3.5.0 release notes

--- a/guides/content/release_notes/3_5_0.md
+++ b/guides/content/release_notes/3_5_0.md
@@ -9,25 +9,35 @@ section: version
 described in [Spree Development Roadmap](https://github.com/spree/spree/milestones?direction=asc&sort=due_date&state=open).
 It also contains number of bug fixes and improvements besides described in this document.
 
-### Spree Backend views exporter
+### Multi-store management
 
-You can easily copy all of the default spree views into
+We've added an ability to manage multiple stores in one Spree instance of your application.
+Thanks to that you can easily create stores per region / language / currency.
+This feature will be enhanced in the next releases.
+
+Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8545)
+
+### Extracted Analytics tracker into an Extension
+
+Our goal is always to keep the core Spree lean and flexible that's why we've moved all of the code of
+Analytics Trackers to an Extension which you can use with any `Spree 3.1+` version.
+
+[Spree Analytics Trackers](https://github.com/spree-contrib/spree_analytics_trackers) extension currently supports Google Analytics and Segment.com.
+
+Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8408)
+
+### Admin Panel views exporter
+
+You can easily copy all of the default spree admin Panel into
 your project with just one command line:
 
 ```bash
 rails g spree:backend:copy_views
 ```
 
-We hope will make backend customization easier.
+We hope will make backend customization the Admin Panel a lot easier.
 
 Contributed by [supatk](https://github.com/spree/spree/issues/8583)
-
-### Multi-store management
-
-You can manage multiple stores in one instance of your application.
-
-Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8545)
-
 
 ## Upgrade
 
@@ -55,10 +65,6 @@ rails spree_gateway:install:migrations
 rails db:migrate
 ```
 
-### Other Gotchas
-
-
-
 #### Noteworthy Changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
@@ -71,7 +77,7 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
 ## Noteworthy Changes
 
-* Added `Address#EXCLUDED_KEYS_FOR_COMPARISION` so developers won't need to rewrite `Address#same_as`
+* Added `Address#EXCLUDED_KEYS_FOR_COMPARISION` so developers won't need to rewrite `Address#same_as` method
 
   [Spark Solutions](https://github.com/spree/spree/pull/8387)
 
@@ -96,17 +102,9 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
   [Spark Solutions](https://github.com/spree/spree/pull/8402)
 
-* Added dockerfile for sandbox application
+* Added `Dockerfile` for sandbox application
 
   [Spark Solutions](https://github.com/spree/spree/pull/8402)
-
-* Added rspec-retry for randomly failing specs specs
-
-  [Spark Solutions](https://github.com/spree/spree/pull/8426)
-
-* Extracted Analytics Trackers into extension
-
-  [Spark Solutions](https://github.com/spree/spree/pull/8408)
 
 * Replaced phantomjs with chrome headless
 
@@ -120,7 +118,7 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
   [Spark Solutions](https://github.com/spree/spree/pull/8612)
 
-* Added rubocop-rspec and fixed linter issues
+* Added `rubocop-rspec` and fixed linter issues
 
   [artplan1](https://github.com/spree/spree/pull/8574)
 
