Added note about Ruby 2.5 compatibility

--- a/guides/content/release_notes/3_6_0.md
+++ b/guides/content/release_notes/3_6_0.md
@@ -12,6 +12,12 @@ Thanks to that you can start using all of the [new great features available in R
 
 Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8601)
 
+### Ruby 2.5 support
+
+Spree now works with Ruby `2.2` (`>= 2.2.7`), `2.3.x`, `2.4.x` and `2.5.x`.
+
+Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8743)
+
 ## Upgrade
 
 ### Update your Rails version to 5.2
