--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -644,6 +644,7 @@ en:
     coupon_code_not_eligible: This coupon code is not eligible for this order
     coupon_code_not_found: The coupon code you entered doesn't exist. Please try again.
     coupon_code_unknown_error: This coupon code could not be applied to the cart at this time.
+    coupon_code_removal_error: Something went wrong. If the problem reoccurs, please contact the store owner
     create: Create
     create_a_new_account: Create a new account
     create_new_order: Create new order
