--- a/guides/content/release_notes/3_5_0.md
+++ b/guides/content/release_notes/3_5_0.md
@@ -39,14 +39,31 @@ We hope will make backend customization the Admin Panel a lot easier.
 
 Contributed by [supatk](https://github.com/spree/spree/issues/8583)
 
+## Installation
+
+### Add Spree gems to Gemfile
+```ruby
+gem 'spree', '~> 3.5.0.rc2'
+gem 'spree_auth_devise', '~> 3.3'
+gem 'spree_gateway', '~> 3.3'
+```
+
+### Run `bundle install`
+
+### Use the install generators to set up Spree
+
+```shell
+rails g spree:install --user_class=Spree::User
+rails g spree:auth:install
+rails g spree_gateway:install
+```
+
 ## Upgrade
 
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.5.0'
-gem 'spree_auth_devise', '~> 3.3'
-gem 'spree_gateway', '~> 3.3'
+gem 'spree', '~> 3.5.0.rc2'
 ```
 
 ### Run `bundle update`
@@ -92,17 +109,11 @@ as it was [extracted from the core](https://github.com/spree/spree/pull/8408).
 
 You're good to go!
 
-#### Noteworthy Changes
+## Noteworthy Changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
-
-## Full Changelog
-
-You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-4-stable...master).
-
-## Noteworthy Changes
 
 * Added `Address#EXCLUDED_KEYS_FOR_COMPARISION` so developers won't need to rewrite `Address#same_as` method
 
@@ -160,3 +171,7 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 * Dropped dependency on `with_model` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/8528)
+
+## Full Changelog
+
+You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-4-stable...master).
