Add paperclip updated vesion to 3-5 release notes

--- a/guides/content/release_notes/3_5_0.md
+++ b/guides/content/release_notes/3_5_0.md
@@ -172,6 +172,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8528)
 
+* Updated `paperclip` to `~> 6.0.0`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8775)
+
 ## Full Changelog
 
-You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-4-stable...master).
+You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-4-stable...3-5-stable).
