--- a/guides/content/release_notes/3_6_0.md
+++ b/guides/content/release_notes/3_6_0.md
@@ -7,7 +7,7 @@ section: version
 
 Alongside Spree 3.5 (for Rails 5.1) we're releasing Spree 3.6 (for Rails 5.2).
 Spree 3.6 has all of the features of Spree 3.5 plus Rails 5.2,
-ActiveStorage and Ruby 2.5 support out of the box. 
+ActiveStorage and Ruby 2.5 support out of the box.
 
 If you're on a Spree 3.4 (or earlier) please see [Spree 3.5 release notes](https://guides.spreecommerce.org/release_notes/spree_3_5_0.html) also.
 
@@ -22,7 +22,7 @@ Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8601)
 
 Active Storage facilitates uploading files to a cloud storage service like Amazon S3, Google Cloud Storage, or Microsoft Azure Storage and attaching those files to Active Record objects. It comes with a local disk-based service for development and testing and supports mirroring files to subordinate services for backups and migrations.
 
-ActiveStorage was introduced in Rails 5.2 and with Spree 3.6 release it's the default file stoage option. We'll still support Paperclip until Spree 4.0 when it will be removed from Spree core. 
+ActiveStorage was introduced in Rails 5.2 and with Spree 3.6 release it's the default file stoage option. We'll still support Paperclip until Spree 4.0 when it will be removed from Spree core.
 
 Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8709)
 
@@ -86,7 +86,7 @@ rails db:migrate
 Please follow the [official paperclip guide](https://github.com/thoughtbot/paperclip/blob/master/MIGRATING.md) if you
 want to use ActiveStorage instead of paperclip.
 
-You cann still use paperclip for attachment management by setting `USE_PAPERCLIP` environment variable to `true`, but keep in mind that paperclip is DEPRECATED and we will remove paperclip support in Spree 4.0.
+You cann still use paperclip for attachment management by setting `SPREE_USE_PAPERCLIP` environment variable to `true`, but keep in mind that paperclip is DEPRECATED and we will remove paperclip support in Spree 4.0.
 
 ## Noteworthy changes
 
