--- a/guides/content/release_notes/3_5_0.md
+++ b/guides/content/release_notes/3_5_0.md
@@ -43,7 +43,7 @@ Contributed by [supatk](https://github.com/spree/spree/issues/8583)
 
 ### Add Spree gems to Gemfile
 ```ruby
-gem 'spree', '~> 3.5.0.rc2'
+gem 'spree', '~> 3.5.0'
 gem 'spree_auth_devise', '~> 3.3'
 gem 'spree_gateway', '~> 3.3'
 ```
@@ -63,7 +63,7 @@ rails g spree_gateway:install
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.5.0.rc2'
+gem 'spree', '~> 3.5.0'
 ```
 
 ### Run `bundle update`
