--- a/guides/content/release_notes/3_6_0.md
+++ b/guides/content/release_notes/3_6_0.md
@@ -36,7 +36,7 @@ Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8743)
 
 ### Add Spree gems to Gemfile
 ```ruby
-gem 'spree', '~> 3.6.0.rc1'
+gem 'spree', '~> 3.6.0'
 gem 'spree_auth_devise', '~> 3.3'
 gem 'spree_gateway', '~> 3.3'
 ```
@@ -62,7 +62,7 @@ to upgrade your store.
 ### Update Gemfile
 
 ```ruby
-gem 'spree', '~> 3.6.0.rc1'
+gem 'spree', '~> 3.6.0'
 ```
 
 ### Run `bundle update`
