--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -54,6 +54,10 @@ Also please review each of the noteworthy changes, and ensure your customization
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
 
+* Renamed `Order#guest_token` to `Order#token`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8826)
+
 * Removed previously deprecated `Spree::Core::EnvironmentExtension`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8782)
