--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -48,6 +48,15 @@ rails spree_gateway:install:migrations
 rails db:migrate
 ```
 
+#### Migrate Spree::Taxon icons to Spree Assets
+
+We renamed `Spree::TaxonIcon` to `Spree::TaxonImage` to clarify usage of this model.
+If you were using `Spree::TaxonIcon` please run this to migrate your icons to images:
+
+```bash
+rails db:migrate_taxon_icons_to_images
+```
+
 ## Noteworthy changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
