Added notice about depcreation of  to 3.7.0 Release Notes

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -66,6 +66,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8782)
 
+* Deprecated `Address#same_as?` in favour of `Address#==`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8386)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-6-stable...3-7-stable).
