Improve omnichannel support by adding a filter on orders list and displaying in orders summary

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -596,6 +596,7 @@ en:
       other: 'Subtotal (%{count} items)'
     categories: Categories
     category: Category
+    channel: Channel
     charged: Charged
     checkout: Checkout
     choose_a_customer: Choose a customer
