Added changes to Release Notes

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -79,6 +79,14 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8386)
 
+* Renamed `Admin::GeneralSettingsHelper` to `Admin::CurrencyHelper`
+
+  [Spark Solutuons](https://github.com/spree/spree/pull/8912)
+
+* Support multiple currencies for Store Credits management in Admin Panel
+
+  [Spark Solutuons](https://github.com/spree/spree/pull/8912)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-6-stable...3-7-stable).
