Add obligatory Store-Order association, add task for association old Orders wiith Stores

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -57,6 +57,15 @@ If you were using `Spree::TaxonIcon` please run this to migrate your icons to im
 rails db:migrate_taxon_icons_to_images
 ```
 
+#### Ensure each Spree::Order associated with Spree::Store
+
+We made order-store association obligatory.
+For ensure all existing `Spree::Order` associated with `Spree::Store` please run this:
+
+```bash
+rails db:associate_orders_with_store
+```
+
 ## Noteworthy changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
@@ -86,6 +95,10 @@ of your own tips please submit a PR to help the next person!
 * Support multiple currencies for Store Credits management in Admin Panel
 
   [Spark Solutuons](https://github.com/spree/spree/pull/8912)
+
+* Add obligatory Store-Order association
+
+  [Spark Solutuons](https://github.com/spree/spree/pull/8926)
 
 ## Full Changelog
 
