--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -66,6 +66,15 @@ For ensure all existing `Spree::Order` associated with `Spree::Store` please run
 rails db:associate_orders_with_store
 ```
 
+#### Ensure each Spree::Order has currency present
+
+We made `currency` presence obligatory in `Spree::Order`.
+For ensure all existing `Spree::Order` has `currency` present please run this:
+
+```bash
+rails db:ensure_order_currency_presence
+```
+
 ## Noteworthy changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
@@ -99,6 +108,10 @@ of your own tips please submit a PR to help the next person!
 * Add obligatory Store-Order association
 
   [Spark Solutuons](https://github.com/spree/spree/pull/8926)
+
+* Add obligatory currency presence in `Spree::Order`
+
+  [Spark Solutuons](https://github.com/spree/spree/pull/8927)
 
 ## Full Changelog
 
