Removed mention of removed preferences for localisation

--- a/guides/content/developer/customization/i18n.md
+++ b/guides/content/developer/customization/i18n.md
@@ -150,11 +150,9 @@ currency for your site, go to Admin, then Configuration, then General Settings.
 Changing the currency will only change the currency symbol across all prices of
 your store.
 
-There are three configuration options for currency:
+There are configuration options for currency:
 
 * `Spree::Config[:currency]`: 3-letter currency code representing the current currency.
-* `Spree::Config[:currency_symbol_position]`: Whether to include the symbol before or after the monetary amount.
-* `Spree::Config[:display_currency]`: Whether or not to display the currency with prices.
 
 ### Localizing Seed Data
 
