Deprecate BaseHelper#variant_options
This is already available via `Variant#options_text` and `LineItem#options_text` so no need for another layer of abstraction.

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -101,6 +101,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9081)
 
+* Deprecated `BaseHelper#variant_options`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9105)
+
 * Renamed `Admin::GeneralSettingsHelper` to `Admin::CurrencyHelper`
 
   [Spark Solutuons](https://github.com/spree/spree/pull/8912)
