Updated Spree 3.7 noteworthy changes

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -81,21 +81,63 @@ Also please review each of the noteworthy changes, and ensure your customization
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
 
+* Support multiple currencies for `Store Credits` management in Admin Panel
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8912)
+
+* Improve error handling for XHR requests in the Admin Panel
+
+  [Vernon de Goede](https://github.com/spree/spree/pull/9089)
+
+* `Order` is now associated to `Store`, presence of `Store` is required for validation
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8926)
+
+* `Order` now has to have `currency` value set
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8927)
+
+* Make `CreditCard` deleted softly by default
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9054)
+
+* Payment's `source` needs to be present (validation can be turned off via `source_required?` in `PaymentMethod`)
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9054)
+
+* Fixed deprecation warning: `BigDecimal.new() is deprecated`
+
+  [Deepak Mahakale](https://github.com/spree/spree/pull/8897)
+
+* Fixed displaying currency in `Admin Panel` -> `Return Authorizations`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9005)
+
+* Fixed all deprecations of Ruby Money 6.13+
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9036)
+
 * Renamed `Order#guest_token` to `Order#token`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8826)
 
-* Removed previously deprecated `Spree::Core::EnvironmentExtension`
+* Renamed `Admin::GeneralSettingsHelper` to `Admin::CurrencyHelper`
 
-  [Spark Solutions](https://github.com/spree/spree/pull/8782)
+  [Spark Solutions](https://github.com/spree/spree/pull/8912)
 
-* Removed previously deprecated `ControllerHelpers::Common#render_404`
+* Deprecated `OrderContents`
 
-  [Spark Solutions](https://github.com/spree/spree/pull/8782)
+* Deprecated `OrdersController#populate` and `OrdersController#populate_redirect`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9050/commits/215cb4391c574136f87824771e14ab211d6cf59c)
 
 * Deprecated `Address#same_as?` in favour of `Address#==`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8386)
+
+* Deprecated `Order#add register_line_item_comparison_hook` (please use `Rails.application.config.spree.line_item_comparison_hooks << hook` instead)
+
+  [Spark Solutions](https://github.com/spree/spree/commit/0a525ccab9ea0bc52cc4e249d53b38df6f231691)
 
 * Deprecated `ControllerHelpers::RespondWith`
 
@@ -105,21 +147,26 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9105)
 
-* Renamed `Admin::GeneralSettingsHelper` to `Admin::CurrencyHelper`
+* Removed previously deprecated `Spree::Core::EnvironmentExtension`
 
-  [Spark Solutuons](https://github.com/spree/spree/pull/8912)
+  [Spark Solutions](https://github.com/spree/spree/pull/8782)
 
-* Support multiple currencies for Store Credits management in Admin Panel
+* Removed previously deprecated `ControllerHelpers::Common#render_404`
 
-  [Spark Solutuons](https://github.com/spree/spree/pull/8912)
+  [Spark Solutions](https://github.com/spree/spree/pull/8782)
 
-* Add obligatory Store-Order association
+* Removed previously deprecated `EmailValidator`
 
-  [Spark Solutuons](https://github.com/spree/spree/pull/8926)
+  [Spark Solutions](https://github.com/spree/spree/pull/9029)
 
-* Add obligatory currency presence in `Spree::Order`
+* Bump `highline` dependency to `2.0.x`
 
-  [Spark Solutuons](https://github.com/spree/spree/pull/8927)
+  [Chamnap Chhorn
+](https://github.com/spree/spree/pull/9079)
+
+* Bump `paperclip` dependency to `6.1.x` 
+
+  [Josh Powell](https://github.com/spree/spree/pull/9028)
 
 ## Full Changelog
 
