Added more information on OrderContents

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -125,7 +125,9 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8912)
 
-* Deprecated `OrderContents`
+* Deprecated `OrderContents` and replaced with several `Cart` services (eg. `Cart::AddItem`)
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8732/commits/f86b4c2c4d3fb468038bfb99389490be73ba998c)
 
 * Deprecated `OrdersController#populate` and `OrdersController#populate_redirect`
 
