Removed deprecated NavigationHelper#icon
This was deprecated via https://github.com/spree/spree/pull/8445

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -161,6 +161,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9029)
 
+* Removed previously deprecated `NavigationHelper#icon`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9121)
+
 * Bump `highline` dependency to `2.0.x`
 
   [Chamnap Chhorn
