Add :add_store_credit_payments deprecation notice in release notes

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -178,6 +178,10 @@ of your own tips please submit a PR to help the next person!
 
   [Josh Powell](https://github.com/spree/spree/pull/9028)
 
+* Deprecated `Spree::Order#add_store_credit_payments` in favor of `Spree::Checkout::AddStoreCredit`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9146)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-6-stable...3-7-stable).
