Include :remove_store_credit_payments deprecation notice in changelog

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -174,14 +174,17 @@ of your own tips please submit a PR to help the next person!
   [Chamnap Chhorn
 ](https://github.com/spree/spree/pull/9079)
 
-* Bump `paperclip` dependency to `6.1.x` 
+* Bump `paperclip` dependency to `6.1.x`
 
   [Josh Powell](https://github.com/spree/spree/pull/9028)
 
-* Deprecated `Spree::Order#add_store_credit_payments` in favor of `Spree::Checkout::AddStoreCredit`
+* Deprecated `Order#add_store_credit_payments` in favor of `Checkout::AddStoreCredit`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9146)
 
+* Deprecated `Order#remove_store_credit_payments` in favor of `Checkout::RemoveStoreCredit`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9152)
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-6-stable...3-7-stable).
