Extracted 3.6 to 3.7 upgrade guide to a seperate doc

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -26,54 +26,7 @@ rails g spree_gateway:install
 
 ## Upgrade
 
-### Update Gemfile
-
-```ruby
-gem 'spree', '~> 3.7.0.rc1'
-```
-
-### Run `bundle update`
-
-### Install missing migrations
-
-```bash
-rails spree:install:migrations
-rails spree_auth:install:migrations
-rails spree_gateway:install:migrations
-```
-
-### Run migrations
-
-```bash
-rails db:migrate
-```
-
-#### Migrate Spree::Taxon icons to Spree Assets
-
-We renamed `Spree::TaxonIcon` to `Spree::TaxonImage` to clarify usage of this model.
-If you were using `Spree::TaxonIcon` please run this to migrate your icons to images:
-
-```bash
-rails db:migrate_taxon_icons_to_images
-```
-
-#### Ensure each Spree::Order associated with Spree::Store
-
-We made order-store association obligatory.
-For ensure all existing `Spree::Order` associated with `Spree::Store` please run this:
-
-```bash
-rails db:associate_orders_with_store
-```
-
-#### Ensure each Spree::Order has currency present
-
-We made `currency` presence obligatory in `Spree::Order`.
-For ensure all existing `Spree::Order` has `currency` present please run this:
-
-```bash
-rails db:ensure_order_currency_presence
-```
+[Spree 3.6 to 3.7 upgrade guide](https://github.com/spree/spree/blob/master/guides/content/developer/upgrades/three-dot-six-to-three-dot-seven.md)
 
 ## Noteworthy changes
 
