Add information about dropping ruby 2.2 support

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -38,6 +38,10 @@ of your own tips please submit a PR to help the next person!
 
   [joshRpowell](https://github.com/spree/spree/pull/9168)
 
+* Dropped support for Ruby 2.2
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8866)
+
 * Support multiple currencies for `Store Credits` management in Admin Panel
 
   [Spark Solutions](https://github.com/spree/spree/pull/8912)
