--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -81,11 +81,15 @@ Also please review each of the noteworthy changes, and ensure your customization
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
 
+* Replaced `sass` with `sassc`
+
+  [joshRpowell](https://github.com/spree/spree/pull/9168)
+
 * Support multiple currencies for `Store Credits` management in Admin Panel
 
   [Spark Solutions](https://github.com/spree/spree/pull/8912)
 
-* Improve error handling for XHR requests in the Admin Panel
+* Improved error handling for XHR requests in the Admin Panel
 
   [Vernon de Goede](https://github.com/spree/spree/pull/9089)
 
@@ -97,7 +101,7 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8927)
 
-* Make `CreditCard` deleted softly by default
+* Made `CreditCard` deleted softly by default
 
   [Spark Solutions](https://github.com/spree/spree/pull/9054)
 
@@ -169,14 +173,18 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9121)
 
-* Bump `highline` dependency to `2.0.x`
+* Bumped `highline` dependency to `2.0.x`
 
   [Chamnap Chhorn
 ](https://github.com/spree/spree/pull/9079)
 
-* Bump `paperclip` dependency to `6.1.x`
+* Bumped `paperclip` dependency to `6.1.x`
 
   [Josh Powell](https://github.com/spree/spree/pull/9028)
+
+* Bumped `bootstrap-sass` to `3.4.x`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9168)
 
 * Deprecated `Order#add_store_credit_payments` in favor of `Checkout::AddStoreCredit`
 
