Updated 3.7 noteworthy changes

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -8,6 +8,7 @@ section: version
 ## Installation
 
 ### Add Spree gems to Gemfile
+
 ```ruby
 gem 'spree', '~> 3.7.0.rc1'
 gem 'spree_auth_devise', '~> 3.3'
@@ -34,10 +35,6 @@ Also please review each of the noteworthy changes, and ensure your customization
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
 
-* Replaced `sass` with `sassc`
-
-  [joshRpowell](https://github.com/spree/spree/pull/9168)
-
 * Dropped support for Ruby 2.2
 
   [Spark Solutions](https://github.com/spree/spree/pull/8866)
@@ -45,6 +42,14 @@ of your own tips please submit a PR to help the next person!
 * Support multiple currencies for `Store Credits` management in Admin Panel
 
   [Spark Solutions](https://github.com/spree/spree/pull/8912)
+
+* Added information if Product is backorderable on Product page
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8438)
+
+* Improved OmniChannel support in the Admin Panel
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8892)
 
 * Improved error handling for XHR requests in the Admin Panel
 
@@ -62,9 +67,41 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9054)
 
-* Payment's `source` needs to be present (validation can be turned off via `source_required?` in `PaymentMethod`)
+* Payment `source` needs to be present (validation can be turned off via `source_required?` in `PaymentMethod`)
 
   [Spark Solutions](https://github.com/spree/spree/pull/9054)
+
+* Added `StockLocation#name` unique validation
+
+  [himanshumishra31](https://github.com/spree/spree/pull/8804)
+
+* Added `FulfilmentChanger` class
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8725)
+
+* Extended `OrderPromotion` model
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9126/commits/cdbcef82c3b90a9b07d107f7eb9cbea04dbe7266)
+
+* Added `ShippingRate#final_price` method
+
+  [Spark Solutions](https://github.com/spree/spree/commit/b55ac6e01f3cba9c4b7f4409de767646ff5f7bf7#diff-f679c11eac90d5fa687247a06a0de8db)
+
+* Added Shipment#free? method
+
+  [Spark Solutions](https://github.com/spree/spree/commit/5efa747f66c07beab6742d3b41e721c7727a435d#diff-f679c11eac90d5fa687247a06a0de8db)
+
+* Added `Product#default_variant` and `Product#default_variant_id` methods
+
+  [Spark Solutions](https://github.com/spree/spree/commit/0ec65dba11ccd969efd3944c76f3befb5a8fbcaa#diff-f679c11eac90d5fa687247a06a0de8db)
+
+* Replaced `sass` with `sassc`
+
+  [joshRpowell](https://github.com/spree/spree/pull/9168)
+
+* Replaced `jquery.cookie` with `js.cookie`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8758)
 
 * Fixed deprecation warning: `BigDecimal.new() is deprecated`
 
@@ -78,6 +115,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9036)
 
+* Fallback to `Order#currency` if there's no currency set for `Adjustment`
+
+  [Spark Solutions](https://github.com/spree/spree/commit/04d4c94d30feb770ff4b14db8d7a597888535676#diff-f679c11eac90d5fa687247a06a0de8db)
+
 * Renamed `Order#guest_token` to `Order#token`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8826)
@@ -86,9 +127,21 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8912)
 
+* Renamed `TaxonIcon` to `TaxonImage`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8879)
+
 * Deprecated `OrderContents` and replaced with several `Cart` services (eg. `Cart::AddItem`)
 
   [Spark Solutions](https://github.com/spree/spree/pull/8732/commits/f86b4c2c4d3fb468038bfb99389490be73ba998c)
+
+* Deprecated `Order#add_store_credit_payments` in favor of `Checkout::AddStoreCredit` service
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9146)
+
+* Deprecated `Order#remove_store_credit_payments` in favor of `Checkout::RemoveStoreCredit` service
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9152)
 
 * Deprecated `OrdersController#populate` and `OrdersController#populate_redirect`
 
@@ -130,6 +183,10 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9121)
 
+* Removed `Product#distinct_by_product_ids`
+
+  [Spark Solutions](https://github.com/spree/spree/commit/960b211026fbec0095f774b69c78dea64559a6c3#diff-f679c11eac90d5fa687247a06a0de8db)
+
 * Bumped `highline` dependency to `2.0.x`
 
   [Chamnap Chhorn
@@ -143,13 +200,6 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9168)
 
-* Deprecated `Order#add_store_credit_payments` in favor of `Checkout::AddStoreCredit`
-
-  [Spark Solutions](https://github.com/spree/spree/pull/9146)
-
-* Deprecated `Order#remove_store_credit_payments` in favor of `Checkout::RemoveStoreCredit`
-
-  [Spark Solutions](https://github.com/spree/spree/pull/9152)
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-6-stable...3-7-stable).
