--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -5,6 +5,42 @@ section: version
 
 ## Major/New Features
 
+3.7 release is our last 3.x line release providing building blocks and bridging 3.x with Spree 4.0. This is a big release packed with an amazing number of features and bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/v3.6.6...v3.7.0)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
+
+Spree 3.7 requires Rails 5.2.2 and Ruby 2.3 (or higher).
+
+### [Storefront API v2](https://spree-guides.now.sh/api/v2/storefront)
+
+We've worked over the last few months to deliver completely new, easy to work and lightweight REST API for building amazing customer interfaces with modern JavaScript libraries (React, Vue, Angular, etc) and for native mobile apps. New Storefront API v2 is fast, easy to use and extend. It's also well documented in [OpenAPI 3.0 (Swagger) format](https://raw.githubusercontent.com/spree/spree/master/api/docs/v2/storefront/index.yaml) which you can [import into Postman app](http://blog.getpostman.com/2018/12/11/postman-supports-openapi-3-0/).
+
+New API is based on [JSON API](https://jsonapi.org/) spec and uses blazing fast Netflix [fast_json_api](https://github.com/Netflix/fast_jsonapi) serializer library. [Authentication](https://spree-guides.now.sh/api/v2/authentication) is based on Oauth using [doorkeeper](https://github.com/doorkeeper-gem/doorkeeper) library. Besides that there's no additional dependencies making it lightweight and future-proof.
+
+Storefront API v2 consists of:
+
+* [Cart endpoints](https://spree-guides.now.sh/api/v2/storefront#tag/Cart) (Create Cart, Add Item, Set Quantity, Remove Item, Empty Cart)
+* [Checkout endpoints](https://spree-guides.now.sh/api/v2/storefront#tag/Checkout) (Update Checkout, Advance Checkout, Complete Checkout, Get Shiping Rates, Get Payment Methods)
+* [Products](https://spree-guides.now.sh/api/v2/storefront/#tag/Products) Catalog
+* [Taxons](https://spree-guides.now.sh/api/v2/storefront/#tag/Taxons) Catalog
+* [Account](https://spree-guides.now.sh/api/v2/storefront#tag/Account) (Account Information, Credit Cards)
+* [Countries](https://spree-guides.now.sh/api/v2/storefront/#tag/Countries)
+* [Authentication](https://spree-guides.now.sh/api/v2/authentication)
+
+All of the endpoints support JSON API's [Sparse Fieldsets](https://jsonapi.org/format/#fetching-sparse-fieldsets) to fix usual Over-Fetching issues and [Related Resources](https://jsonapi.org/format/#fetching-includes) to reduce number of API queries you need to perform.
+
+### Service Oriented Architecture
+
+While building the API v2 we've also refactored a huge portion of Spree internals by introducing modular Service Oriented Architecture to the codebase.
+
+We're in the process of moving domain-specific code from models to `Service Objects` with a well-defined scope and predictable return values. All service objects include [Service Module](https://github.com/spree/spree/blob/master/core/lib/spree/service_module.rb) which unifies how those classes handle arguments and what they return.
+
+Also, we're moving away from ransack library by introducing `Finders` and `Sorters` classes for simpler fetching resources and collections.
+
+This makes Spree codebase easier to read and learn. It also makes any customizations way easier. At the same time, public APIs won't change a lot as providing backward compatibility is one of our top priorities.
+
+### Official MySQL support
+
+A lot of merchants were using Spree with MySQL for years now, but since now the development of the platform was mainly focused on PostgreSQL support. We've changed that and all of our CI builds are tested and verified against both PostgreSQL and MySQL.
+
 ## Installation
 
 ### Add Spree gems to Gemfile
@@ -55,6 +91,10 @@ of your own tips please submit a PR to help the next person!
 
   [Vernon de Goede](https://github.com/spree/spree/pull/9089)
 
+* Improved Admin Panel Variant autocomplete
+
+  [Spark Solutions](https://github.com/spree/spree/pull/8780)
+
 * `Order` is now associated to `Store`, presence of `Store` is required for validation
 
   [Spark Solutions](https://github.com/spree/spree/pull/8926)
@@ -87,7 +127,7 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/commit/b55ac6e01f3cba9c4b7f4409de767646ff5f7bf7#diff-f679c11eac90d5fa687247a06a0de8db)
 
-* Added Shipment#free? method
+* Added `Shipment#free?` method
 
   [Spark Solutions](https://github.com/spree/spree/commit/5efa747f66c07beab6742d3b41e721c7727a435d#diff-f679c11eac90d5fa687247a06a0de8db)
 
