--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -5,15 +5,15 @@ section: version
 
 ## Major/New Features
 
-3.7 release is our last 3.x line release providing building blocks and bridging 3.x with Spree 4.0. This is a big release packed with an amazing number of features and bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/v3.6.6...v3.7.0)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
+3.7 release is our last 3.x line release providing bridging the gap between 3.x and Spree 4.0. This is a big release packed with several amazing features and a huge number of bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/v3.6.6...v3.7.0)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
 
 Spree 3.7 requires Rails 5.2.2 and Ruby 2.3 (or higher).
 
 ### [Storefront API v2](https://spree-guides.now.sh/api/v2/storefront)
 
-We've worked over the last few months to deliver completely new, easy to work and lightweight REST API for building amazing customer interfaces with modern JavaScript libraries (React, Vue, Angular, etc) and for native mobile apps. New Storefront API v2 is fast, easy to use and extend. It's also well documented in [OpenAPI 3.0 (Swagger) format](https://raw.githubusercontent.com/spree/spree/master/api/docs/v2/storefront/index.yaml) which you can [import into Postman app](http://blog.getpostman.com/2018/12/11/postman-supports-openapi-3-0/).
+We've worked hard over the last few months to deliver a completely new, easy to work with and lightweight REST API for building amazing customer interfaces with modern JavaScript libraries (React, Vue, Angular) and for native mobile apps. New Storefront API v2 is fast, easy to use and extend. It's also well documented in [OpenAPI 3.0 (Swagger) format](https://raw.githubusercontent.com/spree/spree/master/api/docs/v2/storefront/index.yaml) which you can [import into Postman app](http://blog.getpostman.com/2018/12/11/postman-supports-openapi-3-0/).
 
-New API is based on [JSON API](https://jsonapi.org/) spec and uses blazing fast Netflix [fast_json_api](https://github.com/Netflix/fast_jsonapi) serializer library. [Authentication](https://spree-guides.now.sh/api/v2/authentication) is based on Oauth using [doorkeeper](https://github.com/doorkeeper-gem/doorkeeper) library. Besides that there's no additional dependencies making it lightweight and future-proof.
+New API is based on [JSON API](https://jsonapi.org/) spec and uses blazing fast Netflix [fast_json_api](https://github.com/Netflix/fast_jsonapi) serializer library. [Authentication](https://spree-guides.now.sh/api/v2/authentication) is based on Oauth using [doorkeeper](https://github.com/doorkeeper-gem/doorkeeper) library. Besides that there are no additional dependencies making it lightweight and future-proof.
 
 Storefront API v2 consists of:
 
@@ -25,7 +25,7 @@ Storefront API v2 consists of:
 * [Countries](https://spree-guides.now.sh/api/v2/storefront/#tag/Countries)
 * [Authentication](https://spree-guides.now.sh/api/v2/authentication)
 
-All of the endpoints support JSON API's [Sparse Fieldsets](https://jsonapi.org/format/#fetching-sparse-fieldsets) to fix usual Over-Fetching issues and [Related Resources](https://jsonapi.org/format/#fetching-includes) to reduce number of API queries you need to perform.
+All of the endpoints support JSON API's [Sparse Fieldsets](https://jsonapi.org/format/#fetching-sparse-fieldsets) to fix usual Over-Fetching issues and [Related Resources](https://jsonapi.org/format/#fetching-includes) to reduce the number of API queries you need to perform.
 
 ### Service Oriented Architecture
 
@@ -39,7 +39,7 @@ This makes Spree codebase easier to read and learn. It also makes any customizat
 
 ### Official MySQL support
 
-A lot of merchants were using Spree with MySQL for years now, but since now the development of the platform was mainly focused on PostgreSQL support. We've changed that and all of our CI builds are tested and verified against both PostgreSQL and MySQL.
+A lot of merchants were using Spree with MySQL for years now, but development of the platform was mainly focused on PostgreSQL support. We've changed that and all of our CI builds are tested and verified against both PostgreSQL and MySQL.
 
 ## Installation
 
@@ -47,8 +47,8 @@ A lot of merchants were using Spree with MySQL for years now, but since now the 
 
 ```ruby
 gem 'spree', '~> 3.7.0.rc1'
-gem 'spree_auth_devise', '~> 3.3'
-gem 'spree_gateway', '~> 3.3'
+gem 'spree_auth_devise', '~> 3.4'
+gem 'spree_gateway', '~> 3.4'
 ```
 
 ### Run `bundle install`
@@ -67,9 +67,7 @@ rails g spree_gateway:install
 
 ## Noteworthy changes
 
-Also please review each of the noteworthy changes, and ensure your customizations
-or extensions are not effected. If you are affected by a change, and have any
-of your own tips please submit a PR to help the next person!
+Please review each of the noteworthy changes to ensure your customizations or extensions are not affected. If you are affected by a change, and have any suggestions please submit a PR to help the next person!
 
 * Dropped support for Ruby 2.2
 
@@ -95,7 +93,7 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/8780)
 
-* `Order` is now associated to `Store`, presence of `Store` is required for validation
+* `Order` is now associated with `Store`, the presence of `Store` is required for validation
 
   [Spark Solutions](https://github.com/spree/spree/pull/8926)
 
@@ -187,7 +185,7 @@ of your own tips please submit a PR to help the next person!
 
   [Spark Solutions](https://github.com/spree/spree/pull/9050/commits/215cb4391c574136f87824771e14ab211d6cf59c)
 
-* Deprecated `Address#same_as?` in favour of `Address#==`
+* Deprecated `Address#same_as?` in favor of `Address#==`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8386)
 
