Fixed github compare link and MySQL description

--- a/guides/content/release_notes/3_7_0.md
+++ b/guides/content/release_notes/3_7_0.md
@@ -5,7 +5,7 @@ section: version
 
 ## Major/New Features
 
-3.7 release is our last 3.x line release bridging the gap between 3.x and Spree 4.0. This is a big release packed with several amazing features and a huge number of bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/v3.6.6...v3.7.0)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
+3.7 release is our last 3.x line release bridging the gap between 3.x and Spree 4.0. This is a big release packed with several amazing features and a huge number of bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/3-6-stable...3-7-stable)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
 
 Spree 3.7 requires Rails 5.2.2 and Ruby 2.3 (or higher).
 
@@ -41,9 +41,9 @@ This makes Spree codebase easier to read and learn. It also makes any customizat
 
 CoffeeScript a few years back ago was a really great JavaScript enhancement. Nowadays with ES6 and TypeScript around it became obsolete. That's why we've converted all of the CoffeeScript assets in Spree and extensions to plain JavaScript and removed CoffeeScript dependency.
 
-### Official MySQL support
+### Improved MySQL support
 
-A lot of merchants were using Spree with MySQL for years now, but development of the platform was mainly focused on PostgreSQL support. We've changed that and all of our CI builds are tested and verified against both PostgreSQL and MySQL.
+A lot of merchants were using Spree with MySQL for years now, but development of the platform was mainly focused on PostgreSQL support. We've changed that and all of our CI builds are tested and verified against both PostgreSQL and MySQL. We've also fixed all MySQL-related bugs.
 
 ## Installation
 
