Update Release Notes

--- a/guides/src/content/release_notes/3_7_0.md
+++ b/guides/src/content/release_notes/3_7_0.md
@@ -137,6 +137,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/commit/0ec65dba11ccd969efd3944c76f3befb5a8fbcaa#diff-f679c11eac90d5fa687247a06a0de8db)
 
+* Delegated `iso` and `iso_name` in `Address` model to `Country`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9173/commits/f4405e8c3999bb844287b55617a3f318d31edb7f)
+
 * Replaced `jquery.cookie` with `js.cookie`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8758)
@@ -200,6 +204,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 * Deprecated `BaseHelper#variant_options`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9105)
+
+* Deprecated `Address#iso_name`, please use `Address#country_iso_name`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9173)
 
 * Removed previously deprecated `Spree::Core::EnvironmentExtension`
 
